Fixes logo size and align

--- a/responsive.css
+++ b/responsive.css
@@ -16,11 +16,14 @@
         display: block;
     }
 
+    .sidebar-icon-box{
+        justify-content: flex-start;
+    }
+
     #text-logo{
         display: block;
-        font-size: 1em;
+        font-size: 1.5em;
         line-height: 50px;
-
     }
 
 }
